--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="root"></div>
-    <script src="https://github.com/DeAnnaN01/walmart-list/App.js"></script>
+    <script src="https://deannan01.github.io/walmart-list/App.js"></script>
 </body>
 
 </html>
